Fix image and cell spacing

--- a/css/index.css
+++ b/css/index.css
@@ -5,6 +5,12 @@
   }
 }
 
+@media (max-width: 550px) {
+  .container {
+    padding: 100px 0px 0px;
+  }
+}
+
 .grid {
   margin: 0 auto;
 }
