--- a/css/post.css
+++ b/css/post.css
@@ -5,11 +5,9 @@ h1 {
 
 img {
   width: 100%;
-  margin: 0% 2.5% 2.5%;
 }
 
 iframe {
   width: 100%;
   height: 100%;
-  margin: 0% 2.5% 2.5%;
 }
